Use consteval in QT_PROPERTY_DEFAULT_BINDING_LOCATION

Adds a consteval QPropertyBindingSourceLocation::fromStdSourceLocation
to make sure the QPropertyBindingSourceLocation is created at compile
time.
This is a workaround for what seem to be bugs in MSVC 2019 and 2022,
which otherwise don't regard
QPropertyBindingSourceLocation(std::source_location::current()) as a
constant expression.

Fixes: QTBUG-106277
Change-Id: Ic2379987b278cc0c43c1eb929120c99f5cd95fdf
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 7979665362fe3f86f2ca9cc2a669cce262bd7322)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>